--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
                             <button class="info-modal-btn btn-nav vibrate-on-click bg-slate-800/50 text-cyan-300 border border-cyan-800/50 rounded-lg px-4 py-2 text-sm" data-tab="about">Hakkında</button>
                             <button class="info-modal-btn btn-nav vibrate-on-click bg-slate-800/50 text-cyan-300 border border-cyan-800/50 rounded-lg px-4 py-2 text-sm" data-tab="archetypes">Arketipler</button>
                             <button class="info-modal-btn btn-nav vibrate-on-click bg-slate-800/50 text-cyan-300 border border-cyan-800/50 rounded-lg px-4 py-2 text-sm" data-tab="contact">İletişim</button>
+                            <button class="info-modal-btn btn-nav vibrate-on-click bg-slate-800/50 text-cyan-300 border border-cyan-800/50 rounded-lg px-4 py-2 text-sm" data-tab="references">Kaynakça</button>
                         </div>
                     </div>
                 </div>
@@ -498,6 +499,7 @@
                 <button class="tab-button vibrate-on-click tech-font py-2 px-6 rounded-t-lg" data-tab="about">Hakkında</button>
                 <button class="tab-button vibrate-on-click tech-font py-2 px-6 rounded-t-lg" data-tab="archetypes">Arketipler</button>
                 <button class="tab-button vibrate-on-click tech-font py-2 px-6 rounded-t-lg" data-tab="contact">İletişim</button>
+                <button class="tab-button vibrate-on-click tech-font py-2 px-6 rounded-t-lg" data-tab="references">Kaynakça</button>
             </div>
             <div id="tab-content-container">
                 <div id="archetypes-content" class="tab-content">
@@ -526,6 +528,15 @@
                         linkedin.com/in/semayy
                     </a>
                     <p class="text-slate-300 mt-4">Semanur Ayyıldız<br><span class="text-sm text-slate-400">Görsel İletişim Tasarımı ve Dijital Dönüşüm Uzmanı</span></p>
+                </div>
+                <div id="references-content" class="tab-content">
+                    <h3 class="tech-font text-2xl text-purple-300 mb-4">Kaynakça</h3>
+                    <ul class="list-disc list-inside text-slate-300 space-y-2 text-sm">
+                        <li>Guilford, J. P. (1967). The Nature of Human Intelligence. McGraw-Hill.</li>
+                        <li>Runco, M. A., & Jaeger, G. J. (2012). The Standard Definition of Creativity. Creativity Research Journal, 24(1), 92–96.</li>
+                        <li>Sternberg, R. J. (Ed.). (1999). Handbook of Creativity. Cambridge University Press.</li>
+                        <li>Torrance, E. P. (1974). Torrance Tests of Creative Thinking. Scholastic Testing Service.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -609,44 +620,44 @@ const translations = {
 
 const archetypes = {
     athena: { 
-        tr: { name: "Athena", desc: "Stratejik ve mantıksal yaratıcılık. Problemleri analiz eder, planlar ve net çözümler üretir." },
-        icon: `<path d="M50 10L80 80H20L50 10Z" stroke-width="5"/><path d="M35 60H65" stroke-width="5"/>`
+        tr: { name: "Stratejist", desc: "Stratejik ve mantıksal yaratıcılık. Problemleri analiz eder, planlar ve net çözümler üretir." },
+        icon: `<path d="M50 15 C 30 15, 20 30, 20 50 C 20 70, 30 85, 50 85 C 70 85, 80 70, 80 50 C 80 30, 70 15, 50 15 Z M 50 25 V 75 M 35 40 H 65 M 35 60 H 65" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     apollo: { 
-        tr: { name: "Apollo", desc: "Uyum ve estetik yaratıcılık. Güzellik, denge ve düzen arar. Sanatsal ve tasarımsal yetenekleri temsil eder." },
-        icon: `<circle cx="50" cy="50" r="30" stroke-width="5"/><circle cx="50" cy="50" r="15" stroke-width="5"/>`
+        tr: { name: "Sanatçı", desc: "Uyum ve estetik yaratıcılık. Güzellik, denge ve düzen arar. Sanatsal ve tasarımsal yetenekleri temsil eder." },
+        icon: `<circle cx="50" cy="50" r="15" stroke-width="5"/><path d="M50 25 V 15 M50 75 V 85 M75 50 H 85 M25 50 H 15 M35 35 L 28 28 M65 65 L 72 72 M35 65 L 28 72 M65 35 L 72 28" stroke-width="5" stroke-linecap="round"/>`
     },
     hermes: { 
-        tr: { name: "Hermes", desc: "Çevik ve birleştirici yaratıcılık. Fikirler arasında hızla bağlantı kurar, iletişimde ustadır ve yenilikleri yayar." },
-        icon: `<path d="M20 80L50 50L20 20M80 80L50 50L80 20" stroke-width="5"/>`
+        tr: { name: "Bağlantı Kurucu", desc: "Çevik ve birleştirici yaratıcılık. Fikirler arasında hızla bağlantı kurar, iletişimde ustadır ve yenilikleri yayar." },
+        icon: `<circle cx="25" cy="25" r="8"/><circle cx="75" cy="25" r="8"/><circle cx="25" cy="75" r="8"/><circle cx="75" cy="75" r="8"/><circle cx="50" cy="50" r="8"/><path d="M30 29 L 45 45 M 70 29 L 55 45 M 30 71 L 45 55 M 70 71 L 55 55" stroke-width="4"/>`
     },
     hephaestus: { 
-        tr: { name: "Hephaestus", desc: "İnşa eden ve üreten yaratıcılık. Soyut fikirleri somut projelere dönüştürür, zanaatkarlık ve mühendislik becerileri yüksektir." },
-        icon: `<rect x="20" y="20" width="60" height="60" rx="5" stroke-width="5"/><rect x="35" y="35" width="30" height="30" rx="5" stroke-width="5" fill="currentColor"/>`
+        tr: { name: "Usta", desc: "İnşa eden ve üreten yaratıcılık. Soyut fikirleri somut projelere dönüştürür, zanaatkarlık ve mühendislik becerileri yüksektir." },
+        icon: `<path d="M20 70 L 40 70 L 40 50 L 50 40 L 60 50 L 60 70 L 80 70 M 30 20 L 70 20 L 75 30 L 25 30 Z" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     prometheus: { 
-        tr: { name: "Prometheus", desc: "Vizyoner ve kural yıkan yaratıcılık. Geleceği şekillendirir, radikal yenilikler peşindedir ve mevcut durumu sorgular." },
-        icon: `<path d="M50 10V90 M10 50H90 M25 25L75 75 M25 75L75 25" stroke-width="5" stroke-linecap="round"/>`
+        tr: { name: "Yenilikçi", desc: "Vizyoner ve kural yıkan yaratıcılık. Geleceği şekillendirir, radikal yenilikler peşindedir ve mevcut durumu sorgular." },
+        icon: `<path d="M50 10 L 40 40 L 60 40 L 50 70 M 50 70 L 45 90 M 50 70 L 55 90" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     dionysus: { 
-        tr: { name: "Dionysus", desc: "Sezgisel ve spontane yaratıcılık. Kuralların dışında düşünür, kaostan beslenir ve beklenmedik fikirler ortaya atar." },
-        icon: `<path d="M20 20C40 80 60 10 80 90" stroke-width="5" stroke-linecap="round"/>`
+        tr: { name: "Kaşif", desc: "Sezgisel ve spontane yaratıcılık. Kuralların dışında düşünür, kaostan beslenir ve beklenmedik fikirler ortaya atar." },
+        icon: `<path d="M50 90 C 70 70, 30 70, 50 50 C 60 35, 40 35, 50 20 C 55 10, 45 10, 50 10" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     janus: { 
-        tr: { name: "Janus", desc: "Yansıtıcı ve çift yönlü yaratıcılık. Geçmişten ders alıp geleceğe uygular, zıtlıklar arasında denge kurar." },
-        icon: `<path d="M50 10V90 M50 50L20 30V70L50 50L80 30V70L50 50" stroke-width="5"/>`
+        tr: { name: "Bilge", desc: "Yansıtıcı ve çift yönlü yaratıcılık. Geçmişten ders alıp geleceğe uygular, zıtlıklar arasında denge kurar." },
+        icon: `<path d="M50 15 V 85 M 50 50 C 30 40 30 60 50 50 M 50 50 C 70 40 70 60 50 50" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     persephone: { 
-        tr: { name: "Persephone", desc: "Dönüştürücü yaratıcılık. Mevcut olanı alır ve ona yepyeni bir anlam veya işlev kazandırır." },
-        icon: `<path d="M20 50H80" stroke-width="5"/><path d="M20 50C40 20 60 80 80 50" stroke-width="5" stroke-dasharray="10 5"/>`
+        tr: { name: "Dönüştürücü", desc: "Dönüştürücü yaratıcılık. Mevcut olanı alır ve ona yepyeni bir anlam veya işlev kazandırır." },
+        icon: `<path d="M30 80 H 70 M 50 80 V 40 C 50 20 70 20 70 40 M 50 40 C 50 20 30 20 30 40" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
     thalia: { 
-        tr: { name: "Thalia", desc: "Sosyal ve esprili yaratıcılık. İnsanları bir araya getirir, mizahtan ve oyundan beslenir, sosyal zekası yüksektir." },
-        icon: `<circle cx="30" cy="30" r="15" stroke-width="5"/><circle cx="70" cy="30" r="15" stroke-width="5"/><path d="M30 70C40 50 60 50 70 70" stroke-width="5" stroke-linecap="round"/>`
+        tr: { name: "Sosyal Zeka", desc: "Sosyal ve esprili yaratıcılık. İnsanları bir araya getirir, mizahtan ve oyundan beslenir, sosyal zekası yüksektir." },
+        icon: `<circle cx="50" cy="50" r="30" stroke-width="5"/><circle cx="40" cy="40" r="3"/><circle cx="60" cy="40" r="3"/><path d="M40 60 Q 50 70 60 60" stroke-width="5" stroke-linecap="round"/>`
     },
     artemis: { 
-        tr: { name: "Artemis", desc: "Odaklanmış ve hedefe yönelik yaratıcılık. Belirli bir hedefe kilitlenir ve o hedefe ulaşmak için hassas ve etkili çözümler geliştirir." },
-        icon: `<path d="M90 50L30 50 M70 30L90 50L70 70" stroke-width="5" stroke-linecap="round"/><circle cx="20" cy="50" r="5" fill="currentColor"/>`
+        tr: { name: "Odak", desc: "Odaklanmış ve hedefe yönelik yaratıcılık. Belirli bir hedefe kilitlenir ve o hedefe ulaşmak için hassas ve etkili çözümler geliştirir." },
+        icon: `<circle cx="50" cy="50" r="30" stroke-width="5"/><circle cx="50" cy="50" r="15" stroke-width="5"/><path d="M10 50 H 70 M 60 40 L 70 50 L 60 60" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>`
     },
 };
 
@@ -1233,7 +1244,7 @@ function processVoiceCommand(command) {
     } else if (command.includes('nasıl başlarım')) {
         speak("Başlamak için adınızı yazın ve başla butonuna tıklayın.");
     } else if (command.includes('yardım')) {
-        speak("Bana 'ekranı oku', 'test nedir', 'arketipler nelerdir', 'nasıl başlarım' veya belirli bir arketipin adını sorabilirsiniz. Örneğin, 'Athena arketipi nedir?'");
+        speak("Bana 'ekranı oku', 'test nedir', 'arketipler nelerdir', 'nasıl başlarım' veya belirli bir arketipin adını sorabilirsiniz. Örneğin, 'Stratejist arketipi nedir?'");
     } else {
         let found = false;
         for (const key in archetypes) {
